# ext-php-rs-starter

./: .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config
.github/workflows/: build.yml
benches/: bench.rs
integration-test/: docker-compose.yml  module.ini
src/: lib.rs
tests/: example.rs
tests/common/: mod.rs
