[package]
name = "yourproject"
version = "0.0.1"
edition = "2021"

[profile.integration-test]
inherits = "dev"
incremental = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = { git = "https://github.com/joehoyle/ext-php-rs", branch = "integrate" }

[dev-dependencies]
tokio = { version = "1.24.2", features = ["net", "macros"] }
tokio-test = "0.4.2"
fastcgi-client = "0.8.0"
indoc = "2.0.0"
rand = "0.8.5"
